--- a/index/bib/thesis.bib
+++ b/index/bib/thesis.bib
@@ -512,3 +512,31 @@
     Month       = {April},
     URL         = {http://www.nber.org/papers/r1380}
 }
+
+@Book{lutkepohl:2005, 
+    Author    = {Helmut Lütkepohl},
+    Title     = {New Introduction to Multiple Time Series Analysis},
+    Publisher = {Springer-Verlag},
+    Year      = {2005},
+    Address   = {Berlin}
+}
+
+@Article{friendly:2002,
+    Author  = {Michael Friendly},
+    Title   = {Corrgrams: Exploratory Displays for Correlation Matrices},
+    Year    = {2002},
+    Journal = {The American Statistician},
+    Volume  = {56},
+    Pages   = {316--324},
+    DOI     = {10.1198/000313002533}
+}
+
+@Article{bai:2003,
+    Author  = {Jushan Bai},
+    Title   = {Inferencial Theory for Factor Models of Large Dimensions},
+    Year    = {2003},
+    Journal = {Econometrica},
+    Volume  = {71},
+    Pages   = {135--171},
+    DOI     = {10.1111/1468-0262.00392}
+}
