--- a/index/02-Methodology.Rmd
+++ b/index/02-Methodology.Rmd
@@ -1,10 +1,12 @@
 # Methodology {#methodology}
 
-## Dynamic factor model
+For the construction of the non-asset-market uncertainty index is necessary capture the common comovements in the series for which is used a dynamic factor model that is described in [Dynamic factor model]. 
+
+## Dynamic factor model {#dynamic-factor-model}
 
 Following @stocwats:2016, the DFM represents the evolution of a vector of $N$ observed time series, $X_{t}$, in terms of a reduced number of unobserved common factors which evolve over time, plus uncorrelated disturbances which represent measurement error and/or idiosyncratic dynamics of the individual series. Throughout this chpater, we use lag operator, so that $a(L) = \sum_{i = 0}^{\infty} a_{i}L^{i}$, where $L$ is the lag operator, and $a(L)X_{t} = \sum_{i = 0}^{\infty} a_{i}X_{t - i}$.
 
-One form of write the model is its dynamic form which represents the dependence of $X_{t}$ on lags of the factors explicitly.
+One form of write the model is its dynamic form which take into account the serial dependence in the data, i.e., represents the dependence of $X_{t}$ on lags of the factors explicitly.
 
 ### Dynamic form of the DFM
 
@@ -16,7 +18,7 @@ The DFM expresses a $N \times 1$ vector $X_{t}$ of observed time series variable
   f_{t} & = & \Psi (L) f_{t} + \eta_{t} (\#eq:evolve)
 \end{eqnarray}
 
-where tha lag polynomial matrices $\lambda(L)$ and $\Psi(L)$ are $N \times q$ and $q \times q$, respectively, and $\eta_{t}$ is the $q \times 1$ vector of (serially uncorrelated) mean-zero innovations to the factors. The idiosyncratic disturbances are assumed to be uncorrelated with the factor innovations at all leads and lags, that is, $\mathbb{E}(e_{t}\eta_{t - k}') = 0$ for all $k$. The $i$th row of $\lambda(L)$, the lag polynomial $\lambda_{i}(L)$, is called the dynamic factor loading for the $i$th series, $X_{it}$. The term $\lambda_{i}(L)f_{t}$ in \@ref(eq:common) is the *common component* of the $i$th series.
+where $X_{t} \stackrel{iid}{\sim} (0, \sum_{x})$ and the lag polynomial matrices $\lambda(L)$ and $\Psi(L)$ are $N \times q$ and $q \times q$, respectively. Also, $\eta_{t}$ is the $q \times 1$ vector of (serially uncorrelated) mean-zero innovations to the factors such that the factor innovations and the idiosyncratic disturbances are assumed to be orthogonal , i.e., $\mathbb{E}(e_{t}\eta_{s}') = 0 ~ \forall ~ t, s$. The $i$th row of $\lambda(L)$, the lag polynomial $\lambda_{i}(L)$, is called the dynamic factor loading for the $i$th series, $X_{it}$. The term $\lambda_{i}(L)f_{t}$ in \@ref(eq:common) is the *common component* of the $i$th series. Because in the basic model \@ref(eq:common) the observed variables are assumed to have mean zero the uncertainty indexes in [Data] are transformed prior to the analysis.
 
 If the idiosyncratic disturbance $e_{t}$ in \@ref(eq:common) is serially correlated the models \@ref(eq:common) and \@ref(eq:evolve) are incompletely specified. @chamroth:1983 *aproximate factor model* allows for such correlation.
 
@@ -24,7 +26,7 @@ If the idiosyncratic disturbance $e_{t}$ in \@ref(eq:common) is serially correla
 
 The *static*, or *stacked*, form of the DFM rewrites the dynamic form \@ref(eq:common) and \@ref(eq:evolve) to depend on $r$ *static factors* $F_{t}$ instead of the $q$ dynamic factors $f_{t}$, where $r \geq q$. This rewriting makes the model amenable to principal component analysis.
 
-Let $p$ be the degree of the lag polynomial matrix $\lambda(L)$ and let $F_{t} = (f_{t}', f_{t - 1}', \ldots, f_{t - p}')'$ denote an $r \times 1$ vector of so-called "static" factors ---in contrast to the "dynamic" factors $f_{t}$. Also let $\Lambda = c(\lambda_{0}, \lambda_{1}, \ldots, \lambda_{p})$, where $\lambda_{h}$ is the $N \times q$ matrix of coefficients on the $h$th lag in $\lambda(L)$. Similarly, let $\Phi(L)$ be the matrix consisting of $1$s, $0$s, and the elements of $\Psi(L)$ such that the vector autoregression in \@ref(eq:common) is rewritten in terms of $F_{t}$. With this notation the DFM \@ref(eq:common) and \@ref(eq:evolve) can be rewritten, 
+Let $p$ be the degree of the lag polynomial matrix $\lambda(L)$ and let $F_{t} = (f_{t}', f_{t - 1}', \ldots, f_{t - p}')'$ denote an $r \times 1$ vector of *static* factors ---in contrast to the shorter vector of *dynamic* factors $f_{t}$. Also let $\Lambda = c(\lambda_{0}, \lambda_{1}, \ldots, \lambda_{p})$, where $\lambda_{h}$ is the $N \times q$ matrix of coefficients on the $h$th lag in $\lambda(L)$. Similarly, let $\Phi(L)$ be the matrix consisting of $1$s, $0$s, and the elements of $\Psi(L)$ such that the vector autoregression in \@ref(eq:common) is rewritten in terms of $F_{t}$. With this notation the DFM \@ref(eq:common) and \@ref(eq:evolve) can be rewritten, 
 
 \begin{eqnarray}
   X_{t} & = & \Lambda F_{t} + e_{t} (\#eq:common-stack)
@@ -32,17 +34,34 @@ Let $p$ be the degree of the lag polynomial matrix $\lambda(L)$ and let $F_{t} =
   F_{t} & = & \Phi(L) F_{t - 1} + G \eta_{t} (\#eq:evolve-stack) 
 \end{eqnarray}
 
-where $G = [I_{q} \quad 0_{q \times (r -q)}]'$.
+where 
+
+\begin{equation*}
+  \Phi = 
+  \begin{bmatrix}
+    \Psi_{1} & \Psi_{2} & \ldots & \Psi_{p} & \Psi_{p + 1} \\
+    I_{q} & 0 & \ldots & 0 & 0 \\
+    0 & I_{q} & \ldots & 0 & 0 \\
+    \vdots & \vdots & \ddots & \vdots & \vdots \\
+    0 & 0 & \ldots & I_{q} & 0
+  \end{bmatrix}_{r \times r} \qquad
+  \text{and} \qquad
+  G = 
+  \begin{bmatrix}
+    I_{q} \\
+    0
+  \end{bmatrix}_{r \times q}
+\end{equation*}
 
 ### Normalization of the factors
 
-Because the factors are unobserved, they are identified only up to arbitrary normalizations. In the principal components normalization ---@baing:2013 refer to this normalization as the PC1 normalization--- the columns of $\Lambda$ are orthogonal and are scaled to have unit norm:
+Because the factors are unobserved, they are identified only up to arbitrary normalizations. Exact identification of the factor model can be ensured with the principal components normalization ---@baing:2013 refer to this normalization as the PC1 normalization--- where the columns of $\Lambda$ are orthonormal:
 
 \begin{equation}
   N^{-1} \Lambda' \Lambda = I_{r} (\#eq:normalization)
 \end{equation}
 
-where $\sum_{F} = \mathbb{E}(F_{t}F_{t}')$ is diagonal.
+and choosing the factors such that $\sum_{F} = \mathbb{E}(F_{t}F_{t}')$ is a diagonal matrix with distinct diagonal elements in decreasing order. In other words, the first factor has the largest variance and, hence, explains the largest part of the variance of $X_{t}$ among the common factors. The second factor, has the second largest variance, and so on. These conditions are sufficient to guarantee identification of $\Lambda$ but only up to the sign of its columns.
 
 ### Estimation of the Factors and DFM Parameters
 
@@ -52,13 +71,14 @@ The parameters and factors of the DFM can be estimated using nonparametric metho
 
 Nonparametric methods estimate the static factors in \@ref(eq:common-stack) directly without specifying a model for the factors or assuming specific distributions for the disturbances. These approaches use cross-sectional averaging to remove the influence of the idiosyncratic disturbances, leaving only the variation associated with the factors.
 
-Principal components solve the least-squares problem in which $\Lambda$ and $F_{t}$ in \@ref(eq:common-stack) are treated as unknown parameters to be estimated:
+Principal components minimize the variance of the idiosyncratic components, i.e., maximizing the part of the variance of the observed variables explained by the common factors in which $\Lambda$ and $F_{t}$ in \@ref(eq:common-stack) are treated as unknown parameters to be estimated:
 
 \begin{equation}
   \min_{F_{1}, \ldots, F_{T}, \Lambda} V_{r}(\Lambda, F), \text{where } V_{r}(\Lambda, F) = \frac{1}{NT} \sum_{t = 1}^{T} (X_{t} - \Lambda F_{t})'(X_{t} - \Lambda F_{t}) (\#eq:pc)
 \end{equation}
 
-subject to the normalization \@ref(eq:normalization). If there are no missing data, then the solution to the least-squares problem in \@ref(eq:pc) is the PC estimator of the factors, $\hat{F}_{t} = N^{-1} \hat{\Lambda}' X_{t}$, where $\hat{\Lambda}$ is the matrix of eigenvectors of the sample variance matrix of $X_{t}$, $\hat{\sum}_{X} = T^{-1} \sum_{t = 1}^{T} X_{t}X_{t}'$, associated with the $r$ largest eigenvalues of $\hat{\sum}_{X}$.
+subject to the normalization \@ref(eq:normalization). The solution to the least-squares problem in \@ref(eq:pc) is the principal components (PC) estimator of the factors, $\hat{F}_{t} = N^{-1} \hat{\Lambda}' X_{t}$, where $\hat{\Lambda}$ is the matrix of eigenvectors of the sample variance matrix of $X_{t}$, $\hat{\sum}_{X} = T^{-1} \sum_{t = 1}^{T} X_{t}X_{t}'$, associated with the $r$ largest eigenvalues of $\hat{\sum}_{X}$, and $\hat
+{\sum}_{F} = T^{-1} \sum_{t = 1}^{T} \hat{F}_{t} \hat{F}_{t}' = \hat{\Lambda}' \hat{\sum}_{X} \hat{\Lambda} = \diag(\lambda_{1}, \ldots, \lambda_{r})$. The eigenvalues $\lambda_{1}, \ldots, \lambda_{r}$ are the empirical variances of the factors with $\lambda_{1}$ representing the variance of the principal component with the largest contribution to the variance of the data, $\lambda_{2}$ represents the variance of the second-most important component, and so on. The properties of this estimator are well discussed in @stocwats:2002.
 
 #### Parametric state-space methods
 
@@ -70,7 +90,7 @@ For parametric estimation, additional assumptions need to be made on the distrib
   e_{it} = \delta_{i} (L) e_{it - 1} + \nu_{it} (\#eq:ar)
 \end{equation}
 
-where $\nu_{it}$ is serially uncorrelated. With the further assumptions that the disturbances $\nu_{it}$ in \@ref(eq:ar) are i.i.d. $\mathcal{N}(o, \sigma_{\nu_{i}}^{2}$), $i = 1, \ldots, N$, $\eta_{t}$ is i.i.d. $\mathcal{N}(0, \sum_{\eta})$, and $\{\nu_{t}\}$ and $\{\eta_{t}\}$ are independent, equations \@ref(eq:common), \@ref(eq:evolve) and \@ref(eq:ar) constitute a complete linear state-space model.
+where $\nu_{it}$ is serially uncorrelated. With the further assumptions that $\nu_{it} \stackrel{iid}{\sim} \mathcal{N}(o, \sigma_{\nu_{i}}^{2})$ , $i = 1, \ldots, N$, and $\eta_{t} \stackrel{iid}{\sim} \mathcal{N}(0, \sum_{\eta})$, and $\{\nu_{t}\}$ and $\{\eta_{t}\}$ are independent, equations \@ref(eq:common), \@ref(eq:evolve) and \@ref(eq:ar) constitute a complete linear state-space model.
 
 Given the parameters, the Kalman filter can be used to compute the likelihood and the Kalman smoother can be used to compute estimates of $f_{t}$ given the full-sample data on $\{X_{t}\}$. The likelihood can be maximized to obtain maximum likelihood estimates of the parameters. The fact that the state-space approach uses intertemporal smoothing to estimate the factors, whereas principal components approachs use only contemporaneous smoothing (averaging across series at the same date) is an important difference between the methods.
 
